# SPADE

./: .env.example  .envrc.example  .gitignore  README.md  pyproject.toml
scripts/: evaluate.py  export_tables.py  prepare_data.py  run_baseline.py  run_experiments.py  smoke_pipeline.py  synthesize.py  train_generative.py  train_representation.py  train_stage1.py
src/spade/baselines/: __init__.py  base.py  clustering.py  ganrs.py  marginal.py  noise_mf.py  random_gen.py  spade_adapter.py  tuples.py  vae.py
src/spade/config/: __init__.py  base.py  configs.py
src/spade/data/: __init__.py  datasets.py  interactions.py  sampling.py  split.py
src/spade/eval/: __init__.py  distributions.py  downstream.py  geometry.py  metrics.py  ndi.py  neighbors.py  pgps.py  reference.py  suite.py  transductive.py
src/spade/experiments/: __init__.py  ablations.py  aggregate.py  matrix.py  pipeline.py
src/spade/models/: __init__.py  critics.py  decoder.py  encoders.py  gan_losses.py  gate.py  generative.py  generators.py  losses.py  mlp.py  representation.py  spade.py  train_stage1.py
src/spade/synthesis/: __init__.py  ann.py  dataset.py  synthesizer.py
src/spade/training/: __init__.py  base.py  checkpoint.py  generative.py  representation.py
src/spade/utils/: __init__.py  env.py  logging.py  seed.py
tests/: test_baselines.py  test_config.py  test_data.py  test_environment.py  test_eval.py  test_experiments.py  test_generative.py  test_models.py  test_reproducibility.py  test_synthesis.py  test_utils.py
