[project]
name = "spade"
version = "0.1.0"
description = "Structure-preserving synthetic collaborative filtering data generation via factorized WGAN-GP latent modeling and discrete-by-construction interaction decoding."
authors = [
    {name = "Sagnik Taraphdar",email = "code.sagnik@gmail.com"}
]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "jax[cuda12] (>=0.10.0,<0.11.0)",
    "flax (>=0.12.0,<0.13.0)",
    "optax (>=0.2.8,<0.3.0)",
    "pandas (<3.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "wandb (>=0.27.0,<0.28.0)",
    "faiss-cpu (>=1.14.2,<2.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)"
]


[tool.poetry]
packages = [{ include = "spade", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.6.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m 'not env'"
markers = [
    "env: hardware/environment checks (CPU+GPU) for jax/flax/optax/faiss; excluded from the default run, invoke with `pytest -m env`",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
